@@ -5,7 +5,8 @@ Changelog
 Version 4.8.1 BETA (September 25, 2012)
 
 - Removed obsolete "Into the Nexus" quest.  Thanks yunohu!
-- Localizations updated: deDE, enUS
+- Fixed AtlasQuest button not showing up in Atlas.  Thanks Washakie!
+- Localizations updated: deDE, enUS, zhCN
 
 
 
